<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/root"
    tools:context="tech.onetime.beaconRecorder.activity.initActivityV3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distance"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/distance_lable"
        android:layout_alignBottom="@+id/distance_lable"
        android:layout_alignStart="@+id/times"
        android:clickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/times"
        android:textSize="18sp"
        android:layout_marginStart="42dp"
        android:layout_alignBaseline="@+id/times_lable"
        android:layout_alignBottom="@+id/times_lable"
        android:layout_toEndOf="@+id/times_lable"
        android:clickable="false" />

    <Button
        android:text="@string/store_result"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:id="@+id/storeResult"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/distance_lable"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:text="@string/setting"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:id="@+id/setting"
        android:layout_below="@+id/startScan"
        android:layout_alignStart="@+id/startScan"
        android:layout_marginTop="12dp" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/forTEST"
        android:visibility="gone" />

    <Space
        android:layout_width="271dp"
        android:id="@+id/forAlign"
        android:layout_height="45dp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txPower_lable"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txPower"
        android:textSize="18sp"
        android:clickable="false"
        android:layout_alignBaseline="@+id/txPower_lable"
        android:layout_alignBottom="@+id/txPower_lable"
        android:layout_alignStart="@+id/distance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txPower_lable"
        android:textSize="22sp"
        android:layout_marginTop="17dp"
        android:clickable="false"
        android:text="檔名:"
        android:layout_below="@+id/distance_lable"
        android:layout_alignStart="@+id/distance_lable" />

    <TextView
        android:text="@string/distance_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distance_lable"
        android:textSize="22sp"
        android:layout_marginTop="18dp"
        android:clickable="false"
        android:layout_below="@+id/times"
        android:layout_alignEnd="@+id/times_lable" />

    <Button
        android:text="@string/scan"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:id="@+id/startScan"
        android:layout_alignTop="@+id/forAlign"
        android:layout_alignStart="@+id/forAlign" />

    <Button
        android:text="@string/stop_scan"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:id="@+id/stopScan"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/distance_lable"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:text="@string/scan_again"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:id="@+id/cleanUp"
        android:visibility="gone"
        android:layout_below="@+id/forAlign"
        android:layout_alignStart="@+id/forAlign"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="Beacon :"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beacon_lable"
        android:layout_marginBottom="12dp"
        android:textSize="22sp"
        android:layout_above="@+id/times_lable"
        android:layout_alignEnd="@+id/times_lable" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/rssi"
        android:textSize="150sp"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:text="@string/times_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/times_lable"
        android:textSize="22sp"
        android:layout_marginStart="58dp"
        android:clickable="false"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/forAlign" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beacon"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/beacon_lable"
        android:layout_alignBottom="@+id/beacon_lable"
        android:layout_alignStart="@+id/times" />

    <EditText
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_alignBaseline="@+id/txPower"
        android:layout_alignBottom="@+id/txPower"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
